[package]
name = "seedgen"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SovaNetwork/seedgen"
keywords = ["bitcoin", "blockchain", "BIP39", "BIP32"]

[dependencies]
bip39 = "2.0"
bip32 = { version = "0.5", features = ["secp256k1"] }
rand = "0.8"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
zeroize = "1.8"